<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asha.dshm.asha2.Family_Details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="50dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:foregroundGravity="center_vertical|center_horizontal|center"
                android:gravity="center"
                android:text="@string/family"
                android:textSize="50dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sn"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sn" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/E_SN"
                    android:layout_weight="1"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Name" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/E_name"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sex"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Sex" />


                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender_array"
                    android:layout_weight="1"></Spinner>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dob"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dob" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/calendar" />
                <TextView
                    android:id="@+id/E_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/age"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/age" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/E_age"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/aadhar"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/aadhar" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/E_aadhar"
                    android:layout_weight="1"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/occupation"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/occupation" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/occupation_array"
                    android:layout_weight="1"></Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/marital"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/marital_status" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/marital_array"
                    android:layout_weight="1"></Spinner>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/problems"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/potential_problems" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <CheckBox
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/immunisation"
                       android:text="@string/immunisation"/>

                   <CheckBox
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/nutrition"
                       android:text="@string/Nutrition"/>

                   <CheckBox
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/pregnancy"
                       android:text="@string/pregnancy_reg"/>

                   <CheckBox
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/nc"
                       android:text="@string/non_communicable"/>

                   <CheckBox
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/visual"
                       android:text="@string/visual"/>

                   <CheckBox
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/rntcp"
                       android:text="@string/RNTCP"/>

                   <CheckBox
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/disability"
                       android:text="@string/disability"/>

                   <CheckBox
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/mortality"
                       android:text="@string/mortality"/>
               </LinearLayout>

            </LinearLayout>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="25dp">

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="right"
                    android:background="@color/buttonColor"
                    android:text="@string/save_form"
                    />
            </RelativeLayout>
        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>
